# python-pytest-testing-project-79

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
page_loader/: cli.py  page_loader.py
tests/: test_page_loader.py
