[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]

[project]
name = "page_loader"
version = "0.1.0"
dependencies = ["requests",
                "beautifulsoup4"]

[project.optional-dependencies]
dev = ["pytest",
       "requests-mock"]

[project.scripts]
page-loader = "page_loader.cli:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)s [%(name)s]: %(message)s"